--- a/Mohaeng/Mohaeng/Resources/Storyboards/Home/Setting.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Home/Setting.storyboard
@@ -10,6 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
         <array key="SpoqaHanSansNeo-Regular.otf">
             <string>SpoqaHanSansNeo-Regular</string>
         </array>
@@ -63,27 +66,53 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ver 1.0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nO7-0V-VQZ">
+                                <rect key="frame" x="179" y="804" width="56" height="18"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="14"/>
+                                <color key="textColor" name="Grey1"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WwA-TU-uhk">
+                                <rect key="frame" x="137" y="724" width="140" height="30"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
+                                <color key="tintColor" name="Yellow1"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="모행이들이 궁금하다면?">
+                                    <color key="titleColor" name="Yellow1"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchMemberButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="clQ-Jg-H7y"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="nO7-0V-VQZ" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="5gh-xU-ZpH"/>
                             <constraint firstItem="ixA-Ay-y2C" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="9Bf-yN-5CD"/>
+                            <constraint firstItem="nO7-0V-VQZ" firstAttribute="top" secondItem="WwA-TU-uhk" secondAttribute="bottom" constant="50" id="KN3-xW-wNx"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ixA-Ay-y2C" secondAttribute="trailing" id="XFO-tR-xLu"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="nO7-0V-VQZ" secondAttribute="bottom" constant="40" id="vZ7-2Q-Ekf"/>
+                            <constraint firstItem="WwA-TU-uhk" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="xkL-eo-y4Y"/>
                             <constraint firstItem="ixA-Ay-y2C" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="yXR-de-vJG"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="settingTableView" destination="ixA-Ay-y2C" id="Yfk-Pf-eun"/>
+                        <outlet property="versionLabel" destination="nO7-0V-VQZ" id="tQt-79-l1g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133" y="72"/>
+            <point key="canvasLocation" x="131.8840579710145" y="71.651785714285708"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="Black">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Grey1">
+            <color red="0.29399999976158142" green="0.29399999976158142" blue="0.29399999976158142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
