--- a/Mohaeng/Mohaeng/Resources/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,32 +16,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashJourney" translatesAutoresizingMaskIntoConstraints="NO" id="Kgh-gs-qiL">
-                                <rect key="frame" x="0.0" y="90" width="270.5" height="577"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashSole" translatesAutoresizingMaskIntoConstraints="NO" id="esX-5T-2Px">
+                                <rect key="frame" x="260.5" y="278.5" width="39" height="47"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" name="Yellow4"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Kgh-gs-qiL" secondAttribute="height" multiplier="53:113" id="WNf-Ly-CE0"/>
+                                    <constraint firstAttribute="height" constant="47" id="bfz-J8-SO3"/>
+                                    <constraint firstAttribute="width" constant="39" id="f1G-HQ-zn6"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spashTypoLogo" translatesAutoresizingMaskIntoConstraints="NO" id="HI7-LG-zg5">
-                                <rect key="frame" x="191" y="489" width="164" height="164"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashTypo" translatesAutoresizingMaskIntoConstraints="NO" id="L7u-fM-M5H">
-                                <rect key="frame" x="165.5" y="185.5" width="144" height="76"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="L7u-fM-M5H" secondAttribute="height" multiplier="142:75" id="vlv-dW-LhD"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="8oR-N7-J43">
+                                <rect key="frame" x="99.5" y="300.5" width="176" height="66"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="1" green="0.82745098039215681" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="YellowButton1"/>
                         <constraints>
-                            <constraint firstItem="L7u-fM-M5H" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" constant="50" id="EVL-U8-7NG"/>
-                            <constraint firstItem="Kgh-gs-qiL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="G9q-Ia-YXV"/>
-                            <constraint firstItem="Kgh-gs-qiL" firstAttribute="top" secondItem="L7u-fM-M5H" secondAttribute="bottom" constant="-171.66666666666663" id="XnX-TM-4aJ"/>
-                            <constraint firstItem="Kgh-gs-qiL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="cNY-aR-pf0"/>
-                            <constraint firstAttribute="bottom" secondItem="HI7-LG-zg5" secondAttribute="bottom" constant="14" id="jMk-wD-aGM"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HI7-LG-zg5" secondAttribute="trailing" constant="20" id="reT-zu-orl"/>
-                            <constraint firstAttribute="bottom" secondItem="Kgh-gs-qiL" secondAttribute="bottom" id="uEE-EY-hBD"/>
+                            <constraint firstItem="8oR-N7-J43" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="faK-a8-WSo"/>
+                            <constraint firstItem="esX-5T-2Px" firstAttribute="trailing" secondItem="8oR-N7-J43" secondAttribute="trailing" constant="24" id="s8U-ME-p2d"/>
+                            <constraint firstItem="8oR-N7-J43" firstAttribute="top" secondItem="esX-5T-2Px" secondAttribute="bottom" constant="-25" id="tUZ-Kr-IVo"/>
+                            <constraint firstItem="8oR-N7-J43" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="ubg-70-JwK"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -50,8 +45,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="spashTypoLogo" width="164" height="164"/>
-        <image name="splashJourney" width="318" height="678"/>
-        <image name="splashTypo" width="142.5" height="76"/>
+        <image name="logo" width="176" height="66"/>
+        <image name="splashSole" width="39" height="47"/>
+        <namedColor name="Yellow4">
+            <color red="1" green="0.90600001811981201" blue="0.66299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YellowButton1">
+            <color red="1" green="0.76899999380111694" blue="0.32499998807907104" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
