[#515] 모행이들이 궁금하다면? 연결

--- a/Mohaeng/Mohaeng/Resources/Storyboards/Home/OpenSourceLicense.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Home/OpenSourceLicense.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Open Source License View Controller-->
+        <!--OpenSourceLicense-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="OpenSourceLicenseViewController" customModule="Mohaeng" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OpenSourceLicenseViewController" title="OpenSourceLicense" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="OpenSourceLicenseViewController" customModule="Mohaeng" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
